# unused-buddy

./: Cargo.toml  LICENSE  README.md  RELEASING.md  package.json
.github/workflows/: npm-publish.yml  release.yml
benches/: scan_bench.rs
scripts/npm/: pack-local.sh  publish-from-release.mjs
scripts/release/: release.mjs
src/: analyzer.rs  color.rs  config.rs  help_ai.rs  lib.rs  main.rs  model.rs  output.rs
tests/: cli_help.rs
