[package]
name = "unused-buddy"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
walkdir = "2.5"
globset = "0.4"
regex = "1.11"
owo-colors = "4.1"
anyhow = "1.0"
thiserror = "2.0"
oxc_allocator = "0.113.0"
oxc_parser = "0.113.0"
oxc_ast = "0.113.0"
oxc_span = "0.113.0"
oxc_syntax = "0.113.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scan_bench"
harness = false
